# sdl-demo

./: .clang-format  CMakeLists.txt  main.cpp
sdlxx/: sdlxx.h
